[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "braque"
version = "1.0.7"
authors = [
  { name="Lorenzo Dall'Olio", email="lorenzo.dallolio4@unibo.it" },
]
dependencies = [
    "contourpy>=1.1.0",
    "cycler>=0.11.0",
    "Cython>=0.29.35",
    "fonttools>=4.40.0",
    "hdbscan>=0.8.29",
    "joblib>=1.2.0",
    "kiwisolver>=1.4.4",
    "llvmlite>=0.40.1rc1",
    "matplotlib>=3.7.1",
    "numba>=0.57.0",
    "numpy>=1.24.3",
    "packaging>=23.1",
    "pandas>=2.0.2",
    "Pillow>=9.5.0",
    "pynndescent>=0.5.10",
    "pyparsing>=3.1.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "scikit-learn>=1.2.2",
    "scipy>=1.10.1",
    "seaborn>=0.12.2",
    "six>=1.16.0",
    "threadpoolctl>=3.1.0",
    "tqdm>=4.65.0",
    "tzdata>=2023.3",
    "umap-learn>=0.5.3"
]
description = "BRAQUE is a pipeline for clustering high dimensional data, specifically it was built for and tested on proteomics data acquired through immunofluorescence technique."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LorenzoDallOlio/BRAQUE"
"Bug Tracker" = "https://github.com/LorenzoDallOlio/BRAQUE/issues"
